# FORGE

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/source/: api_reference.rst  changelog.rst  conf.py  examples.rst  getting_started.rst  gui.rst  how_it_works.rst  index.rst  installation.rst  license.rst
docs/source/api/: critical.rst  equilibrium.rst  greens.rst  io.rst  machine.rst  magnets.rst  optimise.rst  plotting.rst  quadrature.rst  utils.rst
examples/: 01_mastu_strike_point.py  02_mastu_strike_surface.py  03_mastu_strike_surface_buffers.py  04_mastu_strike_surface_xpt.py  05_mastu_strike_surface_buffers_xpt.py  06_mastu_strike_surface_tikhonov.py
src/forge/: __init__.py  _paths.py  critical.py  equilibrium.py  greens.py  io.py  machine.py  magnets.py  optimise.py  plotting.py  quadrature.py  utils.py
src/forge/data/: README.txt
src/forge/data/geqdsk/examples/: 02-mastu.geqdsk
src/forge/data/json/MAST-U/: MAST-U_UKAEA_open_data_copyright_notice.txt  MAST-U_active_coils.json  MAST-U_active_coils_masks.json  MAST-U_wall.json
src/forge/data/json/examples/: 02-mastu.json
src/forge/data/pickle/MAST-U/: MAST-U_UKAEA_open_data_copyright_notice.txt
src/forge/gui/: __init__.py  __main__.py  analysis_tab.py  app.py  geometry_tab.py  optimisation_tab.py  setup_tab.py
tests/: conftest.py  test_critical.py  test_greens.py  test_integration.py  test_io.py  test_magnets.py  test_paths.py  test_quadrature.py  test_utils.py
