[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "1.0.0"
authors = [
  { name="Chris Marsden"},
]
description = "A Python-based simulated annealing optimiser for the magnetic geometry of tokamak divertors."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Physics",
]

requires-python = ">=3.10.12"
license = {text = "LGPL-3.0-or-later"}

dependencies = [
    "numpy>=1.26.3",
    "matplotlib>=3.7.5",
    "scipy>=1.11.4",
    "shapely>=2.0.1",
    "freeqdsk>=0.4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
gui = [
    "panel>=1.3.0",
    "bokeh>=3.3.0",
]
notebook = [
    "panel>=1.3.0",
    "bokeh>=3.3.0",
    "jupyter_bokeh>=4.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
]

[project.scripts]
forge-gui = "forge.gui.app:main"

[project.urls]
Repository = "https://github.com/FORGExhaust/FORGE"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
forge = [
    "data/**/*.json",
    "data/**/*.geqdsk",
    "data/**/*.pickle",
    "data/**/*.pkl",
    "data/**/*.svg",
    "data/**/*.png",
    "data/**/*.pdf",
]

[tool.ruff]
# Global/shared settings for Ruff (apply to both formatter and linter)
line-length = 127
target-version = "py310"

# Add paths to skip (Ruff has sensible defaults; these extend them)
extend-exclude = [
  "scripts/",
  "data/"
]

[tool.ruff.lint]
# Linter settings
#  E,W: pycodestyle (spacing, style)
#  F: pyflakes (errors, unused imports)
#  I: import sorting
select = ["E", "W", "F", "I"]

[tool.ruff.format]
# Formatter settings
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true